crates/biome_js_parser/tests/js_test_suite/error/glimmer/glimmer_incomplete_templat.gjs
// Test incomplete "templat" at EOF
// This tests lexer backtracking at EOF boundary
const x = <templat
